test: Add tests for JPI2